--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -15,9 +15,13 @@
 
     <body>
     <!--Add a nav bar here -->
-        <nav>
-        
-        </nav>
+    <nav class="menu">
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Sobre nosotros</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
 
     <!--Add a dealer table here -->
 
