--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -26,7 +26,7 @@
                         <div class="full">
                         <div class="center-desk">
                             <div class="logo">
-                                <a href="{% url 'djangoapp:index' %}">{% load static %}<img src="{% static "djangoapp/media/logo.png" %}" alt="home" /></a>
+                                <a href="{% url 'djangoapp:index' %}">{% load static %}<img src="{% static "djangoapp/media/logo.png" %}" width="60" height="60" alt="home" /></a>
                             </div>
                         </div>
                         </div>
@@ -42,10 +42,10 @@
                                     <a class="nav-link" href="{% url 'djangoapp:index' %}"> Home  </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+                                    <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="furnitures.html">Furnitures</a>
+                                    <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="testimonial.html">Testimonial</a>
