--- a/server/djangoapp/templates/djangoapp/login.html
+++ b/server/djangoapp/templates/djangoapp/login.html
@@ -75,68 +75,25 @@
                 </nav>
             </header>
         <!-- end header inner -->
-        <!-- end header -->
-        <!--  footer -->
-        <footer id="contact">
-            <div class="footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="titlepage">
-                            <h2>Contact Us</h2>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <ul class="location_icon">
-                            <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locations</li>
-                            <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
-                            <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                            <form id="request" class="main_form">
-                            <div class="row">
-                                <div class="col-md-12 ">
-                                    <input class="contactus" placeholder="Full Name" type="type" name="Full Name">
-                                </div>
-                                <div class="col-md-12">
-                                    <input class="contactus" placeholder="Email" type="type" name="Email">
-                                </div>
-                                <div class="col-md-12">
-                                    <input class="contactus" placeholder="Phone Number" type="type" name="Phone Number">
-                                </div>
-                                <div class="col-md-12">
-                                    <textarea class="textarea" placeholder="Message" type="type" Message="Name">Message </textarea>
-                                </div>
-                                <div class="col-sm-col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                    <button class="send_btn">Send</button>
-                                </div>
-                                <div class="col-sm-col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                    <ul class="social_icon">
-                                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            </form>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="map">
-                            <figure>{% load static %}<img src="{% static "djangoapp/media/map.jpg" %}" alt="#"/></figure>
-                            </div>
-                            <form class="bottom_form">
-                            <h3>Newsletter</h3>
-                            <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
-                            <button class="sub_btn">subscribe</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+
+        <!-- Stylize Login form -->
+        <form action="{% url 'djangoapp:login' %}" method="post">
+            {% csrf_token %}
+            <div class="container"> <!--Style root div with .container class -->
+            <h1>Login</h1>
+            <div class="form-group"> <!--Style second div with .form-group class -->
+                <label for="username"><b>User Name</b></label>
+                <input id="username" class = "form-control" type="text" placeholder="Enter User Name: " name="username" required> <!--Style input with .form-control class -->
+                <label for="psw"><b>Password</b></label>
+                <input id="psw" class = "form-control" type="password"  placeholder="Enter Password: " name="psw" required> <!--Style input with .form-control class -->
             </div>
-        </footer>
-        <!-- end footer -->
-    <!-- end body -->
+            {% if message %}
+                <div class="alert alert-warning"> <!--Style the message paragraph with .alert and .alert-warning class -->
+                {{ message }}
+                </div>
+            {% endif %}
+            <button class="btn btn-primary" type="submit">Login</button> <!--Style button with .btn and .btn-primary class -->
+            </div>
+        </form>
     </body>
 </html>
