--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -29,7 +29,7 @@
                 <nav class="navbar navbar-dark bg-dark">
                     <div class="container-fluid">
                         <div class="navbar-header">
-                            <a href="{% url 'djangoapp:index' %}"><img src="{% static "djangoapp/media/logo.png" %}" width="60" height="60" alt="home" /></a>
+                            <a href="{% url 'djangoapp:index' %}"><img src="{{MEDIA_URL}}/logo.png" width="60" height="60" alt="home" /></a>
                         </div>
                         <div class="navbar-header">
                             <nav class="navigation navbar navbar-expand-md navbar-dark ">
