--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -25,55 +25,55 @@
 
         <!-- header -->
         <header>
-            <!-- header inner -->
-                <nav class="navbar navbar-dark bg-dark">
-                    <div class="container-fluid">
-                        <div class="navbar-header">
-                            <a href="{% url 'djangoapp:index' %}"><img src="{{MEDIA_URL}}/logo.png" width="60" height="60" alt="home" /></a>
-                        </div>
-                        <div class="navbar-header">
-                            <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <div class="collapse navbar-collapse" id="navbarsExample04">
-                                    <ul class="navbar-nav mr-auto">
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="{% url 'djangoapp:index' %}"> Home  </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
-                                        </li>
-                                        <li class="nav-item active">
-                                            <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </nav>
-                        </div>
-                        <ul class="nav navbar-nav navbar-right">
-                            {% if user.is_authenticated %}
-                            <li>
-                                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                                    <a class="btn btn-link" href="#">Logout</a>
-                            </li>
-                            {% else %}
-                            <li>
-                                    <form class="form-inline" action="#" method="post">
-                                    {% csrf_token %}
-                                    <div class="input-group">
-                                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                                            <input type="password" class="form-control" placeholder="Password" name="psw" >
-                                            <button class="btn btn-primary" type="submit">Login</button>
-                                            <a class="btn btn-link" href="#">Sign Up</a>
-                                    </div>
-                                    </form>
-                            </li>
-                            {% endif %}
-                        </ul>
+        <!-- header inner -->
+            <nav class="navbar navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a href="{% url 'djangoapp:index' %}"><img src="{{MEDIA_URL}}/logo.png" width="60" height="60" alt="home" /></a>
                     </div>
-                </nav>
-            </header>
+                    <div class="navbar-header">
+                        <nav class="navigation navbar navbar-expand-md navbar-dark ">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarsExample04">
+                                <ul class="navbar-nav mr-auto">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'djangoapp:index' %}"> Home  </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
+                                    </li>
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if user.is_authenticated %}
+                        <li>
+                                <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                                <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                        </li>
+                        {% else %}
+                        <li>
+                            <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                                {% csrf_token %}
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Username" name="username" >
+                                    <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                    <button class="btn btn-primary" type="submit">Login</button>
+                                    <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                                </div>
+                            </form>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </nav>
+        </header>
         <!-- end header inner -->
         <!-- end header -->
         <!--  footer -->
