--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -10,7 +10,100 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
 
 </head>
-    <body>
-    <!--Add review form here -->
+    <!--Add a nav bar here -->
+    <body class="main-layout">
+        <!-- header -->
+        <header>
+        <!-- header inner -->
+            <nav class="navbar navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a href="{% url 'djangoapp:index' %}"><img src="{{MEDIA_URL}}/logo.png" width="60" height="60" alt="home" /></a>
+                    </div>
+                    <div class="navbar-header">
+                        <nav class="navigation navbar navbar-expand-md navbar-dark ">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarsExample04">
+                                <ul class="navbar-nav mr-auto">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'djangoapp:index' %}"> Home  </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if user.is_authenticated %}
+                        <li>
+                                <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                                <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                        </li>
+                        {% else %}
+                        <li>
+                            <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                                {% csrf_token %}
+                                <div class="input-group">
+                                        <input type="text" class="form-control" placeholder="Username" name="username" >
+                                        <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                        <button class="btn btn-primary" type="submit">Login</button>
+                                        <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                                </div>
+                            </form>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <!-- end header inner -->
+        <!-- end header -->
+        <!--Add review form here -->
+        <form action="{% url 'djangoapp:add_review' dealer.id %}" method="post">
+            {% csrf_token %}
+            <div class="container">
+                <p></p>
+                <div class="form-group">
+                    <h2>Add a review about <strong>{{ dealersn }}</strong></h2>
+                    <p></p>
+                    <h6 class="text-dark"><strong>Enter the review content</strong></h6>
+                    <textarea class="form-control" id="content" name="content" rows="3" required placeholder="Please give us a feedback for {{ dealersn }}"></textarea>
+                    <p></p>
+                </div>
+
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
+                    <label class="form-check-label text-dark" for="purchasecheck">Has purchased the car from {{ dealersn }}?</label>
+                    <label class="form-check-label" for="purchasecheck">(select purchased car information below if checked)</label>
+                    <p></p>
+                </div>
+
+                <div class="form-group">
+                    <h6 class="text-dark"><strong>Select your car (model-make-year)</strong></h6>
+                    <select name="carmake" id="carmake" class="form-select" required>
+                        <option selected disabled="true" class="col-md-12 school-options-dropdown text-center"> --- model-make-year --- </option>
+                        {% for car in cars %}
+                            <option class="col-md-12 school-options-dropdown text-center" value="{{car.dealerID}}"> {{ car.model_name }}-{{ car.make }}-{{ car.year }}</option>
+                        {% endfor %}
+                    </select>
+                    <p></p>
+                </div>
+
+                <div class="form-group">
+                    <h6 class="text-dark"><strong>Select your Purchased Date</strong></h6>
+                    <p></p>
+                    <input class="date-own form-control" type="text" name="purchasedate" id="purchasedate" required>
+                    <p></p>
+                </div>
+                <button class="btn btn-primary me-3" type="submit">Submit</button>
+            </div>
+        </form>
     </body>
 </html>
